# ofv-gbga

./: .gitignore  CMakeLists.txt  README.md  makefile
include/: exceptions.h  norm_interface.h
include/common/: IException.h  Timer.h
include/ofv_bga/: evo_pipe.h  exceptions.h  individ.h  parameters.h  st_solver_for_BGA.h  task.h  task_ios.h  task_parameters.h
include/ofv_bga/template_lib/: evo_pipe.hpp  st_solver_for_BGA.hpp  task.hpp
src/: IException.cpp  evo_pipe.cpp  individ.cpp  ios.cpp  norm_interface.cpp  parameters.cpp  st_solver_for_BGA.cpp  st_solver_for_BGA.hpp  task.cpp  task.hpp  task_ios.cpp  task_parameters.cpp
src/common/: IException.cpp
src/tests/: st_solver_test.cpp
